# prontolista

./: .bettercodehub.yml  .gitignore  README.md
ansible/: ansible.cfg  create_django_superuser.sh  create_django_superuser.yml  deploy-production.sh  deploy.sh  deploy.yml  development  production  provision-production.sh  provision.sh  provision.yml  pyproject.toml
ansible/group_vars/: all
ansible/roles/aws/files/: rocket-aws-credentials
ansible/roles/aws/tasks/: main.yml  setup-aws.yml
ansible/roles/create_django_superuser/tasks/: main.yml  superuser.yml
ansible/roles/deploy/files/: env-dev
ansible/roles/deploy/tasks/: deploy.yml  main.yml
api/: .coveragerc  .dockerignore  .flake8  Dockerfile  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  env.example  mypy.ini  pyproject.toml  pytest.ini
api/compose/django/: Dockerfile-dev  Dockerfile-local  Dockerfile-production  docker-entrypoint-dev.sh  docker-entrypoint-local.sh  docker-entrypoint-production.sh
api/compose/nginx/: Dockerfile
api/prontolista/: manage.py
api/prontolista/projects/: admin.py  models.py
api/prontolista/projects/migrations/: 0001_initial.py
api/prontolista/projects/tests/: test_admin.py  test_models.py
api/prontolista/prontolista/: settings.py  urls.py  wsgi.py
api/prontolista/prontolista/settings/: base.py  dev.py  local.py  production.py  test.py
api/prontolista/templates/admin/: base_site.html
api/prontolista/test_instances/: admin.py  apps.py  models.py
api/prontolista/test_instances/migrations/: 0001_initial.py  0002_testinstance_testrun.py  0003_auto_20191113_0004.py  0003_auto_20191113_0055.py  0003_auto_20191113_0104.py  0004_comment.py
api/prontolista/test_instances/tests/: test_admin.py  (+1 more)
api/prontolista/testcases/: admin.py  apps.py  models.py
api/prontolista/testruns/: admin.py  apps.py  models.py
(+25 files in other folders)
