[tool.poetry]
name = "deployment"
version = "0.1.0"
description = ""
authors = ["Pronto Tools <prontotools@prontomarketing.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.8"
jinja2 = "^2.10"
pyyaml = "^5.1"
pycrypto = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
