[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Pronto Tools <prontotools@prontomarketing.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest-django = "^3.5"
pytest-cov = "^2.8"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
